    attribute values
  - (bugfix 387) Treat &#013; inside <pre>...</pre> as a newline.
  - (bugfix 928) Properly display no-break spaces in a UTF-8 document
    if the terminal uses some other charset.
  - (bugfix 947) document.html.wrap_html also affects text in tables.
  - (bugfix 816) Convert entity references in input/@value only once.
* Changes in parsing and rendering of non-HTML content-types
  - (new feature 121) If a mailcap entry indicates copiousoutput,
    ELinks itself acts as a pager.
  - (new feature 916) If a mailcap entry has no %s, provide the file
    as stdin.
* Changes in the document viewer and tabs
  - (new feature) Highlight links as one enters link prefixes.
  - (new feature) Backspace backs out the last digit of the prefix.
  - (bugfix) Tabs opened by -remote now go behind existing dialogs.
  - (new feature 622) -dump-color-mode
  - (bugfix) Fix accesskeys so that they work when priority is 0
  - (enhancement) Text type-ahead searching: don't follow current link
    on enter
  - (bugfix) Take the terminal charset in account when comparing
    accesskeys.
  - (enhancement) Display accesskeys as e.g. (Alt-f), not just (f).
* Changes in user scripting
  - (enhancement) Guile: Read hooks.scm rather than internal-hooks.scm.
    (Keep reading user-hooks.scm, too.)
  - (bugfix) Lua: Don't write to the string returned by lua_tostring.
  - (bugfix 945) Lua: Don't crash if a script calls e.g. error(nil).
  - (enhancement) SMJS: elinks.alert no longer displays as an "error".
  - (new feature) SMJS: New properties elinks.action, elinks.globhist,
    elinks.vs.
  - (new feature) SMJS: New function elinks.load_uri.
  - (new feature) SMJS: New method elinks.execute.
  - (enhancement) SMJS: Garbage-collect SMJS objects before flushing
    caches.
  - (bitrot) Perl: Don't assume POPpx stores the length to n_a.
  - (bugfix) Perl: Fix pre_format_html hook wrt. binary files.
* Build system and compile-time errors (ignore if you don't build ELinks)